--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
     "yup": "^1.7.0"
