--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
     "yup": "^1.7.0"
